@@ -81,5 +81,6 @@ HORAS TRABALHADAS: 7h
 - inclusao de botao excluir item do queue
 - bugfixes
 - exibicao de conteudo de um item do queue
+- inclusao de formulario para edicao de item do queue
 
-HORAS TRABALHADAS: 4h
+HORAS TRABALHADAS: 5h
